objects/Alphabetical_list_of_products__x.object
<CustomObject>
    <description>Alphabetical_list_of_products</description>
    <externalDataSource>NorthwindRead</externalDataSource>
    <externalIndexAvailable>false</externalIndexAvailable>
    <externalName>Alphabetical_list_of_products</externalName>
    <fields>
        <fullName>CategoryID__c</fullName>
        <description>CategoryID</description>
        <externalDeveloperName>CategoryID</externalDeveloperName>
        <label>CategoryID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <description>CategoryName</description>
        <externalDeveloperName>CategoryName</externalDeveloperName>
        <label>CategoryName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinued__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discontinued</description>
        <externalDeveloperName>Discontinued</externalDeveloperName>
        <label>Discontinued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>ProductID</description>
        <externalDeveloperName>ProductID</externalDeveloperName>
        <label>ProductID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>ProductName</description>
        <externalDeveloperName>ProductName</externalDeveloperName>
        <label>ProductName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityPerUnit__c</fullName>
        <description>QuantityPerUnit</description>
        <externalDeveloperName>QuantityPerUnit</externalDeveloperName>
        <label>QuantityPerUnit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReorderLevel__c</fullName>
        <description>ReorderLevel</description>
        <externalDeveloperName>ReorderLevel</externalDeveloperName>
        <label>ReorderLevel</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <description>SupplierID</description>
        <externalDeveloperName>SupplierID</externalDeveloperName>
        <label>SupplierID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>UnitPrice</description>
        <externalDeveloperName>UnitPrice</externalDeveloperName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitsInStock__c</fullName>
        <description>UnitsInStock</description>
        <externalDeveloperName>UnitsInStock</externalDeveloperName>
        <label>UnitsInStock</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitsOnOrder__c</fullName>
        <description>UnitsOnOrder</description>
        <externalDeveloperName>UnitsOnOrder</externalDeveloperName>
        <label>UnitsOnOrder</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alphabetical_list_of_products</label>
    <pluralLabel>Alphabetical_list_of_products</pluralLabel>
</CustomObject>